objects/Settings__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Connected_App_Client_Id__c</fullName>
        <label>Connected App Client Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connected_App_Client_Secret__c</fullName>
        <label>Connected App Client Secret</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Destination_Endpoint__c</fullName>
        <label>Destination Endpoint</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Destination_Org_Password__c</fullName>
        <label>Destination Org Password</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Destination_Org_Security_Token__c</fullName>
        <label>Destination Org Security Token</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Destination_Org_Username__c</fullName>
        <label>Destination Org Username</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Org Credential</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Org Credential Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Org Credentials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>